sandbox/base/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-sample
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: nginx
