sandbox/base/nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sample
spec:
  rules:
  - http:
      paths:
      - backend:
         service:
            name: ingress-sample-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
